frontend/tests/cases/negative/graded-base/zero-pattern-consumption.gr
data Bool = True | False

neg : Bool % 0 -> Bool
neg False = True;
neg True = False